--- a/automl_amlsdkv2_score_bestmodel.ipynb
+++ b/automl_amlsdkv2_score_bestmodel.ipynb
@@ -1,8 +1,38 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scoring using the best model locally - Optional"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The training environment in AML compute cluster can be different than the one locally. Hence the create a new Conda environment in the repo so that model can be loaded locally. \n",
+    "\n",
+    "    conda env create -f conda_env.yml"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the model file downloaded using automl_amlsdkv2_training.ipynb. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Load the model"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +45,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use the test dataset created in automl_amlsdkv2_training.ipynb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Format the test dataset and drop the Churn column. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,8 +85,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run the prediction"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,8 +102,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Merge prediction results with test data to compare the results. "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,56 +121,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['customerID', 'gender', 'SeniorCitizen', 'Partner', 'Dependents',\n",
-       "       'tenure', 'PhoneService', 'MultipleLines', 'InternetService',\n",
-       "       'OnlineSecurity', 'OnlineBackup', 'DeviceProtection', 'TechSupport',\n",
-       "       'StreamingTV', 'StreamingMovies', 'Contract', 'PaperlessBilling',\n",
-       "       'PaymentMethod', 'MonthlyCharges', 'TotalCharges', 'Churn',\n",
-       "       'Churn_Prediction'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "test_data_orig.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "      customerID Churn Churn_Prediction\n",
-      "0     4376-KFVRS    No               No\n",
-      "1     2754-SDJRD    No              Yes\n",
-      "2     9917-KWRBE    No               No\n",
-      "3     0365-GXEZS    No               No\n",
-      "4     9385-NXKDA    No               No\n",
-      "...          ...   ...              ...\n",
-      "1404  5204-HMGYF    No               No\n",
-      "1405  9950-MTGYX    No               No\n",
-      "1406  3675-EQOZA    No               No\n",
-      "1407  3646-ITDGM    No               No\n",
-      "1408  3913-FCUUW    No               No\n",
-      "\n",
-      "[1409 rows x 3 columns]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "selected_columns = test_data_orig[['customerID', 'Churn', 'Churn_Prediction']]\n",
     "\n",
@@ -112,21 +141,17 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 62,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Accuracy: 0.80\n",
-      "Precision: 0.65\n",
-      "Recall: 0.51\n",
-      "F1-Score: 0.57\n"
-     ]
-    }
-   ],
+   "source": [
+    "Calculate accuracy, precision, recall, and F1-score"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.metrics import accuracy_score, precision_score, recall_score, f1_score\n",
@@ -167,42 +192,192 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 25,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "customerID           object\n",
-      "gender               object\n",
-      "SeniorCitizen         int64\n",
-      "Partner                bool\n",
-      "Dependents           object\n",
-      "tenure                int64\n",
-      "PhoneService         object\n",
-      "MultipleLines        object\n",
-      "InternetService      object\n",
-      "OnlineSecurity       object\n",
-      "OnlineBackup         object\n",
-      "DeviceProtection     object\n",
-      "TechSupport          object\n",
-      "StreamingTV          object\n",
-      "StreamingMovies      object\n",
-      "Contract             object\n",
-      "PaperlessBilling     object\n",
-      "PaymentMethod        object\n",
-      "MonthlyCharges      float64\n",
-      "TotalCharges         object\n",
-      "dtype: object\n"
-     ]
-    }
-   ],
    "source": [
-    "# Show column types\n",
-    "column_types = test_data.dtypes\n",
-    "print(column_types)"
+    "### Score using Compute Cluster in AML - Optional "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.identity import DefaultAzureCredential, InteractiveBrowserCredential\n",
+    "from azure.ai.ml import MLClient\n",
+    "try:\n",
+    "    credential = DefaultAzureCredential()\n",
+    "    # Check if given credential can get token successfully.\n",
+    "    credential.get_token(\"https://management.azure.com/.default\")\n",
+    "except Exception as ex:\n",
+    "    # Fall back to InteractiveBrowserCredential in case DefaultAzureCredential not work\n",
+    "    credential = InteractiveBrowserCredential()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Provide values for your AML workspace\n",
+    "\n",
+    "    subscription_id = \"YOUR_SUBSCRIPTION_ID\"\n",
+    "    resource_group = \"YOUR_RESOURCE_GROUP\"\n",
+    "    workspace = \"YOUR_WORKSPACE_NAME\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "ml_client = None\n",
+    "try:\n",
+    "    ml_client = MLClient.from_config(credential)\n",
+    "except Exception as ex:\n",
+    "    print(ex)\n",
+    "    # Enter details of your Azure Machine Learning workspace\n",
+    "    subscription_id = \"f1a8fafd-a8a3-46d8-bb5e-01deb63d275d\"\n",
+    "    resource_group = \"aml-rg\"\n",
+    "    workspace = \"aml-testws\"\n",
+    "    ml_client = MLClient(credential, subscription_id, resource_group, workspace)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Set the model name created in automl_amlsdkv2_training.ipynb"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml.entities import Model\n",
+    "from azure.ai.ml.constants import ModelType\n",
+    "\n",
+    "model_name = \"wa_telco_customer_churn_model_best\"\n",
+    "model_versions = ml_client.models.list(name=model_name)\n",
+    "latest_model = max(model_versions, key=lambda x: x.version)\n",
+    "latest_model.path"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml import command, Input, Output\n",
+    "from azure.ai.ml.constants import AssetTypes, InputOutputModes\n",
+    "data_type = AssetTypes.MLTABLE\n",
+    "input_mode = InputOutputModes.RO_MOUNT\n",
+    "output_mode = InputOutputModes.RW_MOUNT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create Input schema for scoring job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "#data_path = \"./wa_telco_customer_churn_test_data_uri_file.csv\"\n",
+    "inputs = {\n",
+    "    \"input_data\": Input(type=AssetTypes.URI_FILE, path=data_asset.path),\n",
+    "    \"input_model\": Input(type=AssetTypes.MLFLOW_MODEL, path=latest_model.path)\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "inputs"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Create Output schema for scoring job"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataset_path = \"wa-telco-customer-churn-predictions\"\n",
+    "dataset_version = \"1.0\"\n",
+    "outputs = {\n",
+    "    \"output_folder\": Output(\n",
+    "        type=AssetTypes.URI_FOLDER,\n",
+    "        path=f\"azureml://subscriptions/{subscription_id}/resourcegroups/{resource_group}/workspaces/{workspace}/datastores/workspaceblobstore/paths/{dataset_path}\",\n",
+    "        name = dataset_path,\n",
+    "        version = dataset_version\n",
+    "    )\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define scoring job using Command component"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please review score.py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from azure.ai.ml import command, Input\n",
+    "\n",
+    "\n",
+    "# define the command\n",
+    "command_job = command(\n",
+    "    code=\"./\",\n",
+    "    command=\"python score.py --input_model ${{inputs.input_model}} --input_data ${{inputs.input_data}} --output_folder ${{outputs.output_folder}}\",\n",
+    "    experiment_name=\"wa-telco-customer-churn-prediction\",\n",
+    "    inputs=inputs,\n",
+    "    outputs=outputs,    \n",
+    "    environment=\"AzureML-AutoML:142\",\n",
+    "    compute=\"cpu-cluster\",\n",
+    ")\n",
+    "\n",
+    "# Submit the command\n",
+    "ml_client.jobs.create_or_update(command_job)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Please review the results of the Scoring job in Aml Workspace. "
    ]
   }
  ],
