--- a/automl_amlsdkv2_score_bestmodel.ipynb
+++ b/automl_amlsdkv2_score_bestmodel.ipynb
@@ -346,6 +346,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Use the same environment as the model was created in AutoML. \n",
+    "    \n",
+    "        AzureML-AutoML:142"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Please review score.py"
    ]
   },
