--- a/automl_amlsdkv2_train_automl.ipynb
+++ b/automl_amlsdkv2_train_automl.ipynb
@@ -250,15 +250,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "registered_data_asset = ml_client.data.get(name=data_asset_name, version=data_asset_version)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -276,7 +267,7 @@
     "from azure.ai.ml import automl, Input\n",
     "\n",
     "training_data_input = Input(\n",
-    "    type=AssetTypes.MLTABLE, path=train_data_asset.path\n",
+    "    type=AssetTypes.MLTABLE, path=training_data_asset.path\n",
     ")\n",
     "\n",
     "\n",
