--- a/automl_amlsdkv2_train_automl.ipynb
+++ b/automl_amlsdkv2_train_automl.ipynb
@@ -324,6 +324,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Wait till the Automl Job completes before continuing from here. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Use MLFlow to register the best performing model. "
    ]
   },
