--- a/automl_amlsdkv2_train_automl.ipynb
+++ b/automl_amlsdkv2_train_automl.ipynb
@@ -91,7 +91,8 @@
    "metadata": {},
    "source": [
     "Use the Sample Dataset WA_Fn-UseC_-Telco-Customer-Churn.csv and create datasets for Training and Testing. \n",
-    "The test dataset is used to create a scoring job using the best performance model. \n"
+    "The test dataset is used to create a scoring job using the best performance model. \n",
+    "The training and test dataset are created from the same Sample dataset. The test dataset maintains the same class balance as the Original Sample dataset. \n"
    ]
   },
   {
