--- a/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
+++ b/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
@@ -125,6 +125,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Get reference to test dataset from AML"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_asset_name = \"wa_telco_customer_churn_test_data_uri_file\"\n",
+    "data_asset_version = \"1.0\"\n",
+    "data_asset = ml_client.data.get(name=data_asset_name, version=data_asset_version)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Create Input schema for scoring job"
    ]
   },
