--- a/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
+++ b/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
@@ -187,7 +187,7 @@
     "outputs = {\n",
     "    \"output_folder\": Output(\n",
     "        type=AssetTypes.URI_FOLDER,\n",
-    "        path=f\"azureml://subscriptions/{subscription_id}/resourcegroups/{resource_group}/workspaces/{workspace}/datastores/workspaceblobstore/paths/{dataset_path}\",\n",
+    "        path=f\"azureml://subscriptions/{ml_client.subscription_id}/resourcegroups/{ml_client.resource_group_name}/workspaces/{ml_client.workspace_name}/datastores/workspaceblobstore/paths/{dataset_path}\",\n",
     "        name = dataset_path,\n",
     "        version = dataset_version\n",
     "    )\n",
