--- a/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
+++ b/automl_amlsdkv2_score_bestmodel_compute_cluster.ipynb
@@ -173,7 +173,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Create Output schema for scoring job"
+    "Create Output schema for scoring job.\n",
+    "Update dataset_version if the scoring job is re-run. "
    ]
   },
   {
